--- a/public/views/contacto.html
+++ b/public/views/contacto.html
@@ -7,11 +7,11 @@
     <title>Contacto</title>
 </head>
 <body>
-    <section class="min-h-screen bg-white dark:bg-gray-900 lg:flex">
-        <div class="flex flex-col justify-center w-full p-8 lg:bg-gray-100 lg:dark:bg-gray-800 lg:px-12 xl:px-32 lg:w-1/2">
-            <h1 class="text-2xl font-semibold text-gray-800 capitalize dark:text-white lg:text-3xl">hire us.</h1>
+    <section class="min-h-screen bg-white lg:flex">
+        <div class="flex flex-col justify-center w-full p-8 lg:bg-gray-100  lg:px-12 xl:px-32 lg:w-1/2">
+            <h1 class="text-2xl font-semibold text-gray-800 capitalize dark:text-black lg:text-3xl">hire us.</h1>
     
-            <p class="mt-4 text-gray-500 dark:text-gray-400">
+            <p class="mt-4 text-gray-800 dark:text-gray-400">
                 Ask us everything and we would love
                 to hear from you
             </p>
@@ -53,22 +53,22 @@
             <form>
                 <div class="-mx-2 md:items-center md:flex">
                     <div class="flex-1 px-2">
-                        <label class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Full Name</label>
-                        <input type="text" placeholder="John Doe" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                        <label class="block mb-2 text-sm text-gray-600 dark:text-black">Full Name</label>
+                        <input type="text" placeholder="John Doe" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
                     </div>
     
                     <div class="flex-1 px-2 mt-4 md:mt-0">
-                        <label class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Email address</label>
-                        <input type="email" placeholder="johndoe@example.com" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                        <label class="block mb-2 text-sm text-gray-600 dark:text-black">Email address</label>
+                        <input type="email" placeholder="johndoe@example.com" class="block w-full px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md dark:placeholder-gray-600 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
                     </div>
                 </div>
     
                 <div class="w-full mt-4">
-                    <label class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Message</label>
-                    <textarea class="block w-full h-32 px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md md:h-56 dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" placeholder="Message"></textarea>
+                    <label class="block mb-2 text-sm text-gray-600 dark:text-black">Message</label>
+                    <textarea class="block w-full h-32 px-5 py-3 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-md md:h-56 dark:placeholder-gray-600 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" placeholder="Message"></textarea>
                 </div>
     
-                <button class="w-full px-6 py-3 mt-4 text-sm font-medium tracking-wide text-white capitalize transition-colors duration-300 transform bg-blue-500 rounded-md hover:bg-blue-400 focus:outline-none focus:ring focus:ring-blue-300 focus:ring-opacity-50">
+                <button class="w-full px-6 py-3 mt-4 text-sm font-medium tracking-wide text-black capitalize transition-colors duration-300 transform bg-blue-500 rounded-md hover:bg-blue-400 focus:outline-none focus:ring focus:ring-blue-300 focus:ring-opacity-50">
                     get in touch
                 </button>
             </form>
