--- a/public/views/index.html
+++ b/public/views/index.html
@@ -39,7 +39,7 @@
                 <div x-cloak :class="[isOpen ? 'translate-x-0 opacity-100 ' : 'opacity-0 -translate-x-full']" class="absolute inset-x-0 z-20 w-full px-6 py-4 transition-all duration-300 bg-white md:bg-transparent md:relative md:w-auto md:opacity-100 md:translate-x-0 md:flex md:items-center">
                     <div class="flex flex-col md:flex-row md:mx-6">
                         <a class="my-2 text-gray-700 hover:text-blue-500 md:mx-4 md:my-0" href="#">Inicio</a>
-                        <a class="my-2 text-gray-700 hover:text-blue-500 md:mx-4 md:my-0" href="productos.html">Productos</a>
+                        <a class="my-2 text-gray-700 hover:text-blue-500 md:mx-4 md:my-0" href="newProductos.html">Productos</a>
                         <a class="my-2 text-gray-700 hover:text-blue-500 md:mx-4 md:my-0" href="ventas.html">Ventas</a>
                         <a class="my-2 text-gray-700 hover:text-blue-500 md:mx-4 md:my-0" href="reportes.html">Reportes</a>
                     </div>
@@ -322,8 +322,8 @@
                 <div class="space-y-4">
                     <h4 class="text-lg font-semibold">Contacto</h4>
                     <ul class="space-y-2">
-                        <li class="text-gray-400">Email: contacto@ventaspro.com</li>
-                        <li class="text-gray-400">Tel: (123) 456-7890</li>
+                        <li class="text-gray-400">Email: perezsanchezedmundo4@gmail.com</li>
+                        <li class="text-gray-400">Tel: (221) 571 1441</li>
                     </ul>
                 </div>
             </div>
