--- a/public/views/index.html
+++ b/public/views/index.html
@@ -40,16 +40,8 @@
                     <div class="flex flex-col md:flex-row md:mx-6">
                         <a class="my-2 text-gray-700 hover:text-blue-500 md:mx-4 md:my-0" href="#">Inicio</a>
                         <a class="my-2 text-gray-700 hover:text-blue-500 md:mx-4 md:my-0" href="newProductos.html">Productos</a>
-                        <a class="my-2 text-gray-700 hover:text-blue-500 md:mx-4 md:my-0" href="ventas.html">Ventas</a>
                         <a class="my-2 text-gray-700 hover:text-blue-500 md:mx-4 md:my-0" href="reportes.html">Reportes</a>
-                    </div>
-        
-                    <div class="flex justify-center md:block">
-                        <a class="relative text-gray-700 hover:text-gray-600" href="carrito.html">
-                            <svg class="w-5 h-5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M3 3H5L5.4 5M7 13H17L21 5H5.4M7 13L5.4 5M7 13L4.70711 15.2929C4.07714 15.9229 4.52331 17 5.41421 17H17M17 17C15.8954 17 15 17.8954 15 19C15 20.1046 15.8954 21 17 21C18.1046 21 19 20.1046 19 19C19 17.8954 18.1046 17 17 17ZM9 19C9 20.1046 8.10457 21 7 21C5.89543 21 5 20.1046 5 19C5 17.8954 5.89543 17 7 17C8.10457 17 9 17.8954 9 19Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                            </svg>
-                        </a>
+                        <a class="my-2 text-gray-700 transition-colors duration-300 transform hover:text-blue-500 lg:mx-4 lg:my-0" href="contacto.html">Contacto</a>
                     </div>
                 </div>
 
@@ -57,8 +49,8 @@
                     <div class="flex flex-col lg:flex-row lg:mx-6">
                         <a class="my-2 text-gray-700 transition-colors duration-300 transform hover:text-blue-500 lg:mx-4 lg:my-0" href="#">Inicio</a>
                         <a class="my-2 text-gray-700 transition-colors duration-300 transform hover:text-blue-500 lg:mx-4 lg:my-0" href="productos.html">Productos</a>
-                        <a class="my-2 text-gray-700 transition-colors duration-300 transform hover:text-blue-500 lg:mx-4 lg:my-0" href="ventas.html">Ventas</a>
                         <a class="my-2 text-gray-700 transition-colors duration-300 transform hover:text-blue-500 lg:mx-4 lg:my-0" href="reportes.html">Reportes</a>
+                        <a class="my-2 text-gray-700 transition-colors duration-300 transform hover:text-blue-500 lg:mx-4 lg:my-0" href="contacto.html">Contacto</a>
                     </div>
                     <button class="px-6 py-2 font-medium tracking-wide text-white capitalize transition-colors duration-300 transform bg-blue-600 rounded-lg hover:bg-blue-500 focus:outline-none focus:ring focus:ring-blue-300 focus:ring-opacity-80 ml-0 lg:ml-4">
                         <a href="login.html">Iniciar Sesión</a>
