Cambios de Diseño

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -273,7 +273,7 @@
                             confirmButtonText: 'Ir al Dashboard'
                         }).then((result) => {
                             if (result.isConfirmed) {
-                                window.location.href = "productos.html"; // Redirigir al dashboard
+                                window.location.href = "componentes.html"; // Redirigir al dashboard
                             }
                         });
                     } else {
